<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_msp_intent"
        android:layout_marginTop="40dp"
        android:padding="20dp"
        android:textSize="18sp"
        android:textColor="@color/design_default_color_primary_dark"
        android:gravity="center"/>


    <Button
        android:id="@+id/sunmipospayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pay_with_sunmi"
        android:layout_marginTop="20dp"
        android:visibility="gone" />


    <Button
        android:id="@+id/softpayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pay_with_softpos"
        android:layout_marginTop="20dp"
        android:visibility="gone" />

</LinearLayout>
